--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 
             </p>
         </footer>
-        <script src="/javascript/main.js">
+        <script src="javascript/main.js">
             
         </script>
         
